<resources>
    <string name="app_name">Quiz App</string>
    <string name="score">Score 0/4</string>
    <string name="questionsNo">1/4 Questions</string>


    <string name="ques1">If the array is already sorted, which of these algorithms will exhibit the best performance ?</string>
    <string name="ques1_a">Merge sort</string>
    <string name="ques1_b">Heap sort</string>
    <string name="ques1_c">Insertion sort</string>
    <string name="ques1_d">Quick sort</string>
    <string name="ques1_ans">Insertion sort</string>

    <string name="ques2">If several elements are competing for the same bucket in the hash table, what is it called ?</string>
    <string name="ques2_a">Diffusion</string>
    <string name="ques2_b">Collision</string>
    <string name="ques2_c">Replication</string>
    <string name="ques2_d">Duplication</string>
    <string name="ques2_ans">Collision</string>

    <string name="ques3">Which of the following sorting technique use the term ‘pivot’ ?</string>
    <string name="ques3_a">Selection sort</string>
    <string name="ques3_b">Bubble sort</string>
    <string name="ques3_c">Quick sort</string>
    <string name="ques3_d">Insertion sort</string>
    <string name="ques3_ans">Quick sort</string>

    <string name="ques4">The given array is arr = {3,4,5,2,1}. The number of iterations in bubble sort is ?</string>
    <string name="ques4_a">5</string>
    <string name="ques4_b">4</string>
    <string name="ques4_c">3</string>
    <string name="ques4_d">1</string>
    <string name="ques4_ans">4</string>
    <string name="selected_option">SelectedOption</string>
    <string name="correct_option">CorrectOption</string>

</resources>