<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#F3341A6E"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/questionNo"
        android:textColor="#ffa384"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/questionsNo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/selectedOption"
            android:text="@string/selected_option"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/correctAns"
            android:text="@string/correct_option"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="60dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ques1"
            android:id="@+id/question"
            android:textSize="30sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ques1_a"
            android:onClick="optionA"
            android:background="@drawable/option_design"
            android:id="@+id/optionA"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="25sp"
            android:textColor="#F3341A6E"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="optionB"
            android:textStyle="bold"
            android:text="@string/ques1_b"
            android:background="@drawable/option_design"
            android:id="@+id/optionB"
            android:gravity="center"
            android:textSize="25sp"
            android:padding="5dp"
            android:textColor="#F3341A6E"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ques1_c"
            android:onClick="optionC"
            android:id="@+id/optionC"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="25sp"
            android:background="@drawable/option_design"
            android:textColor="#F3341A6E"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ques1_d"
            android:id="@+id/optionD"
            android:textStyle="bold"
            android:padding="5dp"
            android:onClick="optionD"
            android:background="@drawable/option_design"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#F3341A6E"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@color/white"
        android:id="@+id/score"
        android:gravity="end"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="40dp"/>

    <ProgressBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:indeterminate="false"
        android:id="@+id/progress"/>
</LinearLayout>